# rlru

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  build_version.rs  flake.nix  justfile
.github/workflows/: auto-tag-release.yml  distributable-binaries.yml
crates/psynet/: Cargo.toml  README.md
crates/psynet/src/: lib.rs
crates/rlru-dioxus/: Cargo.toml  Dioxus.toml  build.rs
crates/rlru-dioxus/assets/: styles.css
crates/rlru-dioxus/assets/icons/: SOURCE.md
crates/rlru-dioxus/src/: desktop.rs  main.rs  model.rs  tray.rs  version.rs  views.rs
examples/: training_probe.rs
nix/: home-manager-module.nix  nixos-module.nix
src/: app.rs  auth.rs  cli.rs  config.rs  daemon.rs  lib.rs  main.rs  paths.rs  psynet.rs  state_file.rs  sync.rs  training.rs  training_tests.rs  upload.rs  upload_name.rs  version.rs
src/app/: format.rs  mod.rs  model.rs
