[package]
name = "rlru-dioxus"
version = "0.1.0"
edition = "2021"
description = "Dioxus client for rlru"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rlru-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.9", default-features = false, features = ["launch", "lib"] }
serde = { version = "1", features = ["derive"] }
web-sys = { version = "0.3", features = ["Location", "Window"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rlru = { path = "../.." }
