[package]
name = "rlru-dioxus"
version = "0.1.19"
edition = "2021"
description = "Dioxus client for rlru"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "rlru-dioxus"
path = "src/main.rs"

[dependencies]
dioxus = { version = "=0.7.9", default-features = false, features = ["launch", "lib"] }
futures-util = "0.3"
gdk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }
gtk = { version = "0.18", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
ksni = { version = "0.3", optional = true, features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
web-sys = { version = "0.3", features = ["Location", "Window"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dep:gdk", "dep:glib", "dep:gtk", "dep:image", "dep:ksni"]
mobile = ["dioxus/mobile"]
android = ["mobile"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["clock"] }
rlru = { path = "../..", default-features = false }
